# detector

./: LICENSE  README.md  archive_manager.py  config.conf  config.ini  config.yml  data.yaml  db_api.py  gui.py  logger.py  main.py  pyproject.toml  requirements.txt  requirments.txt  tracking_data.db  video_composer.py  video_recorder.py
src/smart_detector/: __init__.py  application_core.py  archive_manager.py  archiver.py  camera_stream.py  cli.py  config.ini  config.py  config_constants.py  core.py  person_detector_core.py  utils.py  video_utils.py
tests/: test_camera_stream.py
